--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,6 @@ markdown_extensions:
   - admonition
   - codehilite:
       guess_lang: false
-  - pymdownx.superfences
+  - pymdownx.tabbed
   - toc:
       permalink: true
