--- a/.github/workflows/check-links.yaml
+++ b/.github/workflows/check-links.yaml
@@ -7,14 +7,10 @@ on:
       - master
 
 jobs:
-  link-checker:
+  markdown-link-checker:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.8]
     steps:
       - uses: actions/checkout@v2
-
       - name: Install markdown-link-check
         run: |
           npm i markdown-link-check
@@ -27,6 +23,14 @@ jobs:
             -name docs -prune -o \
             -iname '*.md' \
             -exec ./node_modules/markdown-link-check/markdown-link-check -q --config .github/workflows/markdown-link-check-config.json {} +
+
+  site-link-checker:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.8]
+    steps:
+      - uses: actions/checkout@v2
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v1
