--- a/.github/workflows/check-links.yaml
+++ b/.github/workflows/check-links.yaml
@@ -50,7 +50,7 @@ jobs:
         id: lc2
         uses: peter-evans/link-checker@v1
         with:
-          args: -d site/ -r site/ -x 'github.com/(\S+/\S+/(issue|pull)|weaveworks/ignite$)' -c 10
+          args: -d site/ -r site/ -x 'github.com/weaveworks/ignite($|/issue|/pull)' -c 10
 
       - name: Fail if there were link errors
         run: exit ${{ steps.lc2.outputs.exit_code }}
